# bevy_chess

./: Cargo.toml  LICENSE.md  README.md
.cargo/: config
assets/models/chess_kit/: pieces.glb
src/: board.rs  main.rs  pieces.rs  ui.rs
